<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GitHub Apps</string>
    <string name="settings">Setting</string>
    <string name="find_name">Find Name</string>
    <string name="username">Username</string>
    <string name="id">Id</string>
    <string name="no_result">No username found</string>
    <string name="to_find">Find Here</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="following_number">100</string>
    <string name="repository_number">100</string>
    <string name="followers_number">100</string>
    <string name="desc_user_image">User Image</string>
    <string name="desc_name_icon">Name icon</string>
    <string name="desc_company_icon">Company icon</string>
    <string name="desc_location_icon">Location icon</string>
    <string name="kilo">K</string>
    <string name="mega">M</string>
    <string name="favourite">Favourite</string>
    <string name="language_settings">Language settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="button_on">On</string>
    <string name="button_off">Off</string>
    <string name="desc_favorite_button">Favourite Button</string>
    <string name="delete_favourite">%s Has been removed from favourite</string>
    <string name="add_favourite">%s Added to Favourite list</string>
    <string name="empty_favourite">Empty Favourite List</string>
    <string name="created">Powered By GitHub Apps</string>
</resources>