<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.datastore.SettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:background="?android:colorPrimary"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/settings"
            app:titleTextAppearance="@style/Text.UsernameTitle"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/btn_languages_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <TextView
            style="@style/Text.Content.Big"
            android:text="@string/language_settings"
            android:textColor="?android:textColorPrimary" />

        <TextView
            android:id="@+id/tv_languages"
            style="@style/Text.SubContent.Big"
            android:layout_marginTop="10dp"
            android:textColor="?android:textColorSecondary"
            android:text="@string/language_settings" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/blue_dark" />

    <LinearLayout
        android:id="@+id/btn_dark_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/Text.Content.Big"
                android:text="@string/dark_mode"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/tv_dark_mode"
                android:layout_marginTop="5dp"
                style="@style/Text.SubContent.Big"
                android:textColor="?android:textColorSecondary"
                android:text="@string/button_on" />

        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_themes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>